add a few more posteriors

--- a/inst/tex/RAP.tex
+++ b/inst/tex/RAP.tex
@@ -560,58 +560,136 @@ Fishing mortality
 \end{itemize}
 
 \begin{figure}
-    \includegraphics[width=0.6\textwidth]{\bdsay/{fishingmortality.timeseries}.png}
+    \includegraphics[width=0.8\textwidth]{\bdsay/{fishingmortality.timeseries}.png}
 \end{figure}
 \end{column}
 
 \end{columns}
 \end{frame}
+\subsection{Fishable Biomass -- Biomass dynamics}
 
-%
-%%------------------------------------------------
-%\section{Business}
-%\subsection{Meetings / Document Schedule}
-%
-%\begin{frame}
-%
-%\frametitle{Meetings Schedule}
-%
-% \vspace*{-0.5cm}
-%\begin{block}
-%
-%\begin{itemize}
-%\item Past- Pre-Rap, RAP, Advisory Committee (AC) Meetings annually
-%\item New DFO standard- Framework, RAP every five years, AC Annually
-%\item Snow Crab Plan- Pre-Rap, Informal RAP, AC annually, Framework/Formal RAP every ~5 years
-%
-%\end{itemize}
-%\end{block}
-%\end{frame}
 
-%----------------------------------------------------------------------------------------
-%
-%
-%\begin{frame}
-%
-%\frametitle{Document Schedule}
-%
-% \vspace*{-0.5cm}
-%\begin{block}
-%
-%\begin{itemize}
-%\item Past- Res Doc (100+ pages) and SAR (10-15 pages) annually
-%\item New DFO standard- Update document (2-3 pages) annually, Res Doc every 5 years
-%\item Snow Crab Plan- Update document (10-15 pages) annually, based on SAR, Res Doc every 5 years
-%\item Full assessment run annually, an items of note included in update document
-%
-%\end{itemize}
-%
-%\end{block}
-%
-%\end{frame}
-%%------------------------------------------------
-%
+% ----------------------------------
 
+
+\begin{frame}
+  \frametitle{Posteriors}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{\bdsay/{K.density}.png} 
+    
+  \end{figure}
+  
+\end{frame}
+
+
+
+% ----------------------------------
+
+
+\begin{frame}
+  \frametitle{Posteriors}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{\bdsay/{r.density}.png} 
+    
+  \end{figure}
+  
+\end{frame}
+
+
+% ----------------------------------
+
+
+\begin{frame}
+  \frametitle{Posteriors}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{\bdsay/{q.density}.png} 
+    
+  \end{figure}
+  
+\end{frame}
+
+
+
+
+% ----------------------------------
+
+
+\begin{frame}
+  \frametitle{Posteriors}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{\bdsay/{bp.sd.density}.png} 
+    
+  \end{figure}
+  
+\end{frame}
+
+
+
+
+% ----------------------------------
+
+
+\begin{frame}
+  \frametitle{Posteriors}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{\bdsay/{bo.sd.density}.png} 
+    
+  \end{figure}
+  
+\end{frame}
+
+
+
+% ----------------------------------
+
+
+\begin{frame}
+  \frametitle{Posteriors}
+  \begin{figure}
+    \centering
+    \includegraphics[width=0.6\textwidth]{\bdsay/{FMSY.density}.png} 
+    
+  \end{figure}
+  
+\end{frame}
+
+
+
+% ----------------------------------
+
+\begin{frame}
+  \frametitle{Precautionary approach}
+      \begin{figure}[ht]
+     \centering
+     \includegraphics[width=0.8\textwidth]{\bdsa/common/hcr.png}
+     \end{figure}
+\end{frame}
+
+
+% ----------------------------------
+
+\begin{frame}
+  \frametitle{Precautionary approach}
+\begin{figure}
+  \centering
+  \includegraphics[width=0.6\textwidth]{\bdsay/{hcr.default}.png}\\ 
+  
+\end{figure}
+
+\end{frame}
+
+
+
+% ----------------------------------
+
+
+% ----------------------------------
+% ----------------------------------
 
 \end{document}
 
