--- a/inst/tex/RAP.tex
+++ b/inst/tex/RAP.tex
@@ -5,11 +5,10 @@
 %----------------------------------------------------------------------------------------
 %	Presentation for snow crab RAP using beamer
 % last edit: Feb 2017
-
-% to reduce the size of the PDF:
+%
+% Note: to reduce the size of the PDF:
 % use ghostscript:
 % gs -q -dSAFER -dNOPAUSE -sDEVICE=pdfwrite -sPDFSETTINGS=printer -sOutputFile="resdoc2006sc.pdf" resdoc2006sc.pdf 
-
 % the key being sPDFSETTINGS: with options: default, screen, ebook, printer, preprint
 % try also:  -sCompressPages=true
 % -sDownsampleColorImages=true
@@ -17,15 +16,11 @@
 % -sGrayImageResolution=300
 % -sMonoImageResolution=300
 % final choice to get it under 8MB :
-
 % gs -q -dSAFER -dNOPAUSE -sDEVICE=pdfwrite -dPDFSETTINGS=/printer -dColorImageResolution=150 -dMonoImageResolution=150 -dGrayImageResolution=150  -dCompatibilityLevel=1.4 -sOutputFile="resdoc2006sc.printer.pdf" resdoc2006sc.pdf  < /dev/null
-
 %----------------------------------------------------------------------------------------
 
 
 \documentclass{beamer}
-
-\usepackage{default}
 
 \mode<presentation> {
   %\usetheme{Hannover}
@@ -33,92 +28,77 @@
   \usetheme{Boadilla}
   %\usecolortheme{dolphin}
   \usecolortheme{seagull}
-  %\usefonttheme{structuresmallcapsserif}
-  \beamertemplatenavigationsymbolsempty % turn off navigation
+  \usefonttheme{structuresmallcapsserif}
+  %\beamertemplatenavigationsymbolsempty % turn off navigation
   \hypersetup{pdfstartview={Fit}} % fits the presentation to the window when first displayed
 }
 
-
+\usepackage{default}
 \usepackage{fourier}
 \usepackage[english]{babel}															% English language/hyphenation
 \usepackage[protrusion=true,expansion=true]{microtype}				% Better typography
-
 \usepackage[toc,page]{appendix}
 \usepackage[utf8]{inputenc}
 \usepackage{csquotes}
 \usepackage{hyperref}
-
-% linking options
-%%% Equation and float numbering
-\usepackage{amsmath,amsfonts}										% Math packages
-\numberwithin{equation}{section}		% Equationnumbering: section.eq#
-\numberwithin{figure}{section}		% Figurenumbering: section.fig#
-\numberwithin{table}{section}				% Tablenumbering: section.tab#
-
 \usepackage{graphicx} % Allows including images
 \usepackage{graphics}
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
+\usepackage{amsmath,amsfonts}				% Math packages
+\numberwithin{equation}{section}		% Equationnumbering: section.eq#
+\numberwithin{figure}{section}	   	% Figurenumbering: section.fig#
+\numberwithin{table}{section}				% Tablenumbering: section.tab#
 
 
-\newcommand{\D}{.}  % to replace dots .. 
-\newcommand{\bd}{\string~/bio.data}   %  \string~ is a representation of the home directory 
-\newcommand{\bds}{\bd/bio.snowcrab}
-\newcommand{\bdsa}{\bds/assessments}
-\newcommand{\bdsay}{\bdsa/2016}
 
-
-% these need to be incremented each year ..
+%----------------------------------------------------------------------------------------
+% these need to be incremented each year .. <<<<<<<<<<<<<<<<<<<<<
 \newcommand{\yr}{2016}
 \newcommand{\yrminusone}{2015}
 \newcommand{\yrminustwo}{2014}
 \newcommand{\yrminusthree}{2013}
-
-\newcommand{\A}{assessments/}
-\newcommand{\Ay}{assessments/\yr/}
-
-\newcommand{\spsmaps}{\bds/R/maps/survey/snowcrab/annual}
+% these need to be incremented each year .. <<<<<<<<<<<<<<<<<<<<<
 
 
+% ----------------------------------
+\newcommand{\D}{.}  % to replace dots .. 
+\newcommand{\bd}{\string~/bio.data}   %  \string~ is a representation of the home directory 
+\newcommand{\bds}{\bd/bio.snowcrab}
+\newcommand{\bdsrm}{\bds/R/maps/survey/snowcrab/annual}
+\newcommand{\bdsa}{\bds/assessments}
+\newcommand{\bdsay}{\bdsa/\yr}
 
-%----------------------------------------------------------------------------------------
-%	TITLE PAGE
-%----------------------------------------------------------------------------------------
 
-\title{Snow Crab Assessment \\
-  Martimes Region \\
-  \yr } 
-
-% The short title appears at the bottom of every slide, the full title is only on the title page
-
-\author{Brad Hubley, Ben Zisserson, Brent Cameron, Jae S. Choi} % Your name
-\institute[DFO] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
-{
+% ----------------------------------
+\title[Snow Crab Assessment \yr]{Snow Crab Assessment\\  Martimes Region\\ \yr } 
+\author[Hubley, Zisserson, Cameron, Choi]{Brad Hubley, Ben Zisserson, Brent Cameron, Jae S. Choi} 
+\institute[DFO Science]{
   Department of Fisheries and Oceans \\ % Your institution for the title page
   Science Branch \\
   Population Ecology Division
   \medskip
   \textit{} % Your email address
 }
-\date{\today} % Date, can be changed to a custom date
+ 
 
+% ----------------------------------
 \begin{document}
-  
-  
+
+
+% ----------------------------------
   \begin{frame}
     \titlepage % Print the title page as the first slide
   \end{frame}
   
+
+% ----------------------------------
   \begin{frame}
-    \frametitle{Overview} % Table of contents slide, comment this block out to remove it
-    \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
+    \frametitle{Overview} % Table of contents slide
+    \tableofcontents % \section{} and \subsection{} 
   \end{frame}
   
-  %----------------------------------------------------------------------------------------
-  %	PRESENTATION SLIDES
-  %----------------------------------------------------------------------------------------
   
-  
-  
+% ----------------------------------
   \begin{frame}
     \frametitle{4VWX Snow Crab}
     \begin{columns}[T]
@@ -142,7 +122,7 @@
   
   
 
-%--------------------------------------------------------------------------------
+% ----------------------------------
 %
 %\section{Survey}
 %
@@ -176,10 +156,9 @@
 % 	\end{column}
 % 	\end{columns}
 %\end{frame}
-%--------------------------------------------------------------------------------
 
+% ----------------------------------
 \section{Interactions with Other Species}
-
 \begin{frame}
 \frametitle{Interactions with Other Species}
 
@@ -190,13 +169,8 @@
 \end{itemize}
 \end{frame}
 
-
-
-
-
 %------------------------------------------------------------------------------
 \subsection{Competition/ Prey}
-
 \begin{frame}
 \frametitle{Competition/Prey}
 Trends in biomass for potential predators/prey (log10, no\textbackslash$km^2$) of Snow Crab on the Scotian Shelf, in the Snow Crab Survey
@@ -212,17 +186,17 @@ Trends in biomass for potential predators/prey (log10, no\textbackslash$km^2$) o
 
 	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\spsmaps/ms.no.2511/{ms.no.2511.\yrminusone}.png}\\   
-    \includegraphics[width=\textwidth]{\spsmaps/ms.no.2521/{ms.no.2521.\yrminusone}.png}\\   
-    \includegraphics[width=\textwidth]{\spsmaps/ms.no.2211/{ms.no.2211.\yrminusone}.png}  
+    \includegraphics[width=\textwidth]{\bdsrm/ms.no.2511/{ms.no.2511.\yrminusone}.png}\\   
+    \includegraphics[width=\textwidth]{\bdsrm/ms.no.2521/{ms.no.2521.\yrminusone}.png}\\   
+    \includegraphics[width=\textwidth]{\bdsrm/ms.no.2211/{ms.no.2211.\yrminusone}.png}  
   	\end{figure}
   	\end{column}
 
   	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\spsmaps/ms.no.2511/{ms.no.2511.\yr}.png}\\   
-    \includegraphics[width=\textwidth]{\spsmaps/ms.no.2521/{ms.no.2521.\yr}.png}\\    
-    \includegraphics[width=\textwidth]{\spsmaps/ms.no.2211/{ms.no.2211.\yr}.png}  
+    \includegraphics[width=\textwidth]{\bdsrm/ms.no.2511/{ms.no.2511.\yr}.png}\\   
+    \includegraphics[width=\textwidth]{\bdsrm/ms.no.2521/{ms.no.2521.\yr}.png}\\    
+    \includegraphics[width=\textwidth]{\bdsrm/ms.no.2211/{ms.no.2211.\yr}.png}  
   	\end{figure}
   	\end{column}
 
@@ -237,12 +211,12 @@ Trends in biomass for potential predators/prey (log10, no\textbackslash$km^2$) o
   	\end{columns}
 \end{frame}
 
-%------------------------------------------------
-\subsection{Predation}
 
+% ----------------------------------
+\subsection{Predation}
 \begin{frame}
 \frametitle{Potential Predation}
-Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Snow Crab on the Scotian Shelf, in the Snow Crab Survey
+Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of snow crab on the Scotian Shelf, in the Snow crab survey
 	\begin{columns}
 	\begin{column}{0.25\textwidth}
 	\begin{itemize}
@@ -255,17 +229,17 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 
 	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\spsmaps/ms.mass.30/{ms.mass.30.\yrminusone}.png}\\   
-    \includegraphics[width=\textwidth]{\spsmaps/ms.mass.10/{ms.mass.10.\yrminusone}.png}\\   
-    \includegraphics[width=\textwidth]{\spsmaps/ms.mass.201/{ms.mass.201.\yrminusone}.png}  
+    \includegraphics[width=\textwidth]{\bdsrm/ms.mass.30/{ms.mass.30.\yrminusone}.png}\\   
+    \includegraphics[width=\textwidth]{\bdsrm/ms.mass.10/{ms.mass.10.\yrminusone}.png}\\   
+    \includegraphics[width=\textwidth]{\bdsrm/ms.mass.201/{ms.mass.201.\yrminusone}.png}  
   	\end{figure}
   	\end{column}
 
   	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\spsmaps/ms.mass.30/{ms.mass.30.\yr}.png}\\   
-    \includegraphics[width=\textwidth]{\spsmaps/ms.mass.10/{ms.mass.10.\yr}.png}\\   
-    \includegraphics[width=\textwidth]{\spsmaps/ms.mass.201/{ms.mass.201.\yr}.png}  
+    \includegraphics[width=\textwidth]{\bdsrm/ms.mass.30/{ms.mass.30.\yr}.png}\\   
+    \includegraphics[width=\textwidth]{\bdsrm/ms.mass.10/{ms.mass.10.\yr}.png}\\   
+    \includegraphics[width=\textwidth]{\bdsrm/ms.mass.201/{ms.mass.201.\yr}.png}  
   	\end{figure}
   	\end{column}
 
@@ -279,11 +253,17 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 
   	\end{columns}
 \end{frame}
-%------------------------------------------------
 
+
+% ----------------------------------
+\begin{frame}
+    \tableofcontents % \section{} and \subsection{} 
+\end{frame}
+
+
+% ----------------------------------
 \section{Population Assessment}
 \subsection{Recruitment}
-
 \begin{frame}
 \frametitle{Recruitment}
 \begin{columns}
@@ -304,15 +284,14 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 	\end{columns}
 \end{frame}
 
+
 %--------------------------------------------------------------
 \subsection{Reproductive Potential}
-
 \begin{frame}
 \frametitle{Sex Ratios}
 	\begin{center}
 	Proportion of females in the mature population
 	\end{center}
-	
 	\begin{columns}
 	\begin{column}{0.3\textwidth}
 	\begin{itemize}
@@ -338,7 +317,8 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 	\end{columns}
 \end{frame}
 
-%------------------------------------------------
+
+% ----------------------------------
 \begin{frame}
 \frametitle{Female Size-Frequency}
 \begin{columns}
@@ -358,7 +338,8 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 	\end{columns}
 \end{frame}
 
-%------------------------------------------------
+
+% ----------------------------------
 \begin{frame}
 \frametitle{Primiparous/Multiparous}
 \begin{columns}
@@ -382,7 +363,8 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 	\end{columns}
 \end{frame}
 
-%------------------------------------------------
+
+% ----------------------------------
 \begin{frame}
 \frametitle{Mature Females}
 	\begin{center}
@@ -403,13 +385,12 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
   \end{columns}
 \end{frame}
 
-%------------------------------------------------
-\subsection{Fishable Biomasss geometric means}
 
+% ----------------------------------
+\subsection{Fishable Biomasss geometric means}
 \begin{frame}
 \frametitle{Fishable Biomass Index -- Geometric Mean}
 \begin{columns}
-
 \begin{column}{0.5\textwidth}
 	\begin{center}
 	Fishable Biomass from Annual Snow Crab Survey. Log10 (t\textbackslash$km^2$).\\ 
@@ -418,8 +399,6 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 		\includegraphics[width=0.9\textwidth]{\bds/R/maps/survey/snowcrab/annual/R0.mass/{R0.mass.\yr}.png}
 	\end{figure}
 \end{column}
-
-
 \begin{column}{0.5\textwidth}
 	\begin{center}
 	Time series of the Fishable Biomass from Annual Snow Crab Survey (Geometric Mean)
@@ -429,13 +408,11 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
     \includegraphics[width=0.7\textwidth]{\bdsay/timeseries/survey/{R0.mass}.pdf}
  \end{figure}
 \end{column}
-
 \end{columns}
 \end{frame}
 
-%
-%%------------------------------------------------
 
+% ----------------------------------
 \begin{frame}
 \frametitle{Fishable Biomass Index -- LBM}
 \begin{columns}
@@ -462,11 +439,10 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 \end{columns}
 \end{frame}
 
-%------------------------------------------------
 
+%------------------------------------------------
 \begin{frame}
   \frametitle{Fishable Biomass Index -- LBM}
-    
    \begin{columns} 
     \begin{column}{0.5\textwidth}
       \begin{center}
@@ -492,25 +468,19 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 
 %------------------------------------------------
 \section{Fisheries Model}
-
 \subsection{Fishable Biomass -- Biomass dynamics}
-
 \begin{frame}
 \frametitle{Fishable Biomass -- Biomass dynamics}
-
 \begin{columns} 
 \begin{column}{0.5\textwidth}
  \begin{itemize}
   \begin{tiny}
- 
      \item Red: The fishable biomass index
      \item Blue: The posterior mean fishable biomass estimated from the logistic model
      \item Grey: The density distribution of posterior fishable biomass estimates darkest area being medians and the 95\% Credible Intervals (CI). 
      \end{tiny}
-       
     \end{itemize}
 \end{column}
-
 \begin{column}{0.5\textwidth}
   \begin{figure}[ht]
     \centering
@@ -520,6 +490,7 @@ Trends in biomass for potential predators (log10, no\textbackslash$km^2$) of Sno
 \end{columns} 
 
 \end{frame}
+
 
 %------------------------------------------------
 \subsection{Fishing Mortality}
@@ -545,7 +516,6 @@ Area trends:
 \end{footnotesize}
 \end{itemize}
 \end{column}
-
 \begin{column}{0.6\textwidth}
 \begin{footnotesize}
 Fishing mortality
@@ -570,98 +540,66 @@ Fishing mortality
 
 
 % ----------------------------------
-
-
 \begin{frame}
   \frametitle{Posteriors}
   \begin{figure}
     \centering
     \includegraphics[width=0.6\textwidth]{\bdsay/{K.density}.png} 
-    
   \end{figure}
-  
 \end{frame}
 
 
-
 % ----------------------------------
-
-
 \begin{frame}
   \frametitle{Posteriors}
   \begin{figure}
     \centering
     \includegraphics[width=0.6\textwidth]{\bdsay/{r.density}.png} 
-    
   \end{figure}
-  
 \end{frame}
 
 
 % ----------------------------------
-
-
 \begin{frame}
   \frametitle{Posteriors}
   \begin{figure}
     \centering
     \includegraphics[width=0.6\textwidth]{\bdsay/{q.density}.png} 
-    
   \end{figure}
-  
 \end{frame}
 
 
-
-
 % ----------------------------------
-
-
 \begin{frame}
   \frametitle{Posteriors}
   \begin{figure}
     \centering
     \includegraphics[width=0.6\textwidth]{\bdsay/{bp.sd.density}.png} 
-    
   \end{figure}
-  
 \end{frame}
 
 
-
-
 % ----------------------------------
-
-
 \begin{frame}
   \frametitle{Posteriors}
   \begin{figure}
     \centering
     \includegraphics[width=0.6\textwidth]{\bdsay/{bo.sd.density}.png} 
-    
   \end{figure}
-  
 \end{frame}
 
 
-
 % ----------------------------------
-
-
 \begin{frame}
   \frametitle{Posteriors}
   \begin{figure}
     \centering
     \includegraphics[width=0.6\textwidth]{\bdsay/{FMSY.density}.png} 
-    
   \end{figure}
-  
 \end{frame}
 
 
-
 % ----------------------------------
-
 \begin{frame}
   \frametitle{Precautionary approach}
       \begin{figure}[ht]
@@ -672,22 +610,16 @@ Fishing mortality
 
 
 % ----------------------------------
-
 \begin{frame}
   \frametitle{Precautionary approach}
 \begin{figure}
   \centering
   \includegraphics[width=0.6\textwidth]{\bdsay/{hcr.default}.png}\\ 
-  
 \end{figure}
-
 \end{frame}
 
 
-
 % ----------------------------------
-
-
 % ----------------------------------
 % ----------------------------------
 
