--- a/inst/tex/RAP.tex
+++ b/inst/tex/RAP.tex
@@ -73,7 +73,7 @@
 \title[Snow Crab Assessment \yr]{Snow Crab Assessment\\  Martimes Region\\ \yr } 
 \author[Hubley, Zisserson, Cameron, Choi]{Brad Hubley, Ben Zisserson, Brent Cameron, Jae S. Choi} 
 \institute[DFO Science]{
-  Department of Fisheries and Oceans \\ % Your institution for the title page
+  Canadian Department of Fisheries and Oceans \\ % Your institution for the title page
   Science Branch \\
   Population Ecology Division
   \medskip
