--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -16,7 +16,7 @@
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
 \newcommand{\D}{.}
-\newcommand{\h}{\string~}
+\newcommand{\h}{\string~/}
 \newcommand{\e}{bio.data/}
 \newcommand{\es}{bio.data/bio.snowcrab/}
 \newcommand{\eb}{bio.data/bio.bathymetry/}
@@ -689,9 +689,10 @@
 \subfloat{\includegraphics[width=0.32\textwidth]{\h \es assessments/2016/figures/size\D freq/observer/size\D freqcfanorth2015.pdf}}\
 \subfloat{\includegraphics[width=0.32\textwidth]{\h \es assessments/2016/figures/size\D freq/observer/size\D freqcfasouth2015.pdf}}\
 \subfloat{\includegraphics[width=0.32\textwidth]{\h \es assessments/2016/figures/size\D freq/observer/size\D freqcfa4x2015.pdf}}\\
+\raggedright
 \subfloat{\includegraphics[width=0.32\textwidth]{\h \es assessments/2016/figures/size\D freq/observer/size\D freqcfanorth2016.pdf}}\ 
-\subfloat{\includegraphics[width=0.32\textwidth]{\h \es assessments/2016/figures/size\D freq/observer/size\D freqcfasouth2016.pdf}}\ 
-\subfloat{\includegraphics[width=0.32\textwidth]{\h \es assessments/2016/figures/size\D freq/observer/size\D freqcfa4x2016.pdf}}\\
+\subfloat{\includegraphics[width=0.32\textwidth]{\h \es assessments/2016/figures/size\D freq/observer/size\D freqcfasouth2016.pdf}}\\ 
+%\subfloat{\includegraphics[width=0.32\textwidth]{\h \es assessments/2016/figures/size\D freq/observer/size\D freqcfa4x2016.pdf}}\\
 \caption{Size frequency distribution of all at-sea-observer monitored snow crab broken down by carapace condition. For 4X, the year refers to the starting year of the season. Vertical lines indicate 95 mm CW.}
 \end{figure}
 
