--- a/inst/tex/RAP.tex
+++ b/inst/tex/RAP.tex
@@ -29,7 +29,7 @@
   %\usecolortheme{dolphin}
   \usecolortheme{seagull}
   \usefonttheme{structuresmallcapsserif}
-  %\beamertemplatenavigationsymbolsempty % turn off navigation
+  \beamertemplatenavigationsymbolsempty % turn off navigation
   \hypersetup{pdfstartview={Fit}} % fits the presentation to the window when first displayed
 }
 
