--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -1035,7 +1035,7 @@
 \begin{figure}
 \centering
 \includegraphics[width=\textwidth]{\h \es assessments/2016/hcr\D default.png}\\ 
-\caption{Time series of fishing mortality and fishable biomass for N-ENS (top), S-ENS (middle) and 4X (bottom) as obtained from the logistic population models.}
+\caption{Time series of fishing mortality and pre-fishery biomass for N-ENS (top), S-ENS (middle) and 4X (bottom) as obtained from the logistic population models.}
 \end{figure}
 \clearpage
 %
