--- a/inst/tex/RAP.tex
+++ b/inst/tex/RAP.tex
@@ -3,7 +3,7 @@
 
 
 %----------------------------------------------------------------------------------------
-%	Presentation for snow crab RAP using beamer
+%	Snow crab technical methods
 % last edit: Feb 2017
 %
 % Note: to reduce the size of the PDF:
@@ -120,7 +120,34 @@
     \end{columns}
   \end{frame}
   
+
+% ----------------------------------
+\section{Biology}
+\begin{frame}
+  \frametitle{Biology}
+  \begin{figure}
+    \includegraphics[width=\textwidth]{\bdsa/common/{snow.crab.annual.cycle}.pdf}
+  \end{figure}
+\end{frame}
   
+% ----------------------------------
+\section{Biology}
+\begin{frame}
+  \frametitle{Biology}
+  \begin{figure}
+    \includegraphics[width=\textwidth]{\bdsa/common/{snow.crab.life.cycle}.pdf}
+  \end{figure}
+\end{frame}
+
+% ----------------------------------
+\section{Biology}
+\begin{frame}
+  \frametitle{Biology}
+  \begin{figure}
+    \includegraphics[width=\textwidth]{\bdsa/common/{snow.crab.growth.rates}.pdf}
+  \end{figure}
+\end{frame}
+
 
 % ----------------------------------
 %
