--- a/inst/tex/RAP.tex
+++ b/inst/tex/RAP.tex
@@ -471,17 +471,17 @@ Environmental factors: Temperature, Depth and Substrate
 
 	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\bd/bio.temperature/maps/SSE/bottom.predictions/climatology/{temperatures.bottom}.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.temperature/maps/SSE/bottom.predictions/climatology/{temperatures.bottom.sd}.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.substrate/R/{substrate.grainsize.edit}.png}  
+    \includegraphics[width=\textwidth]{\bd/bio.indicators/temperature/maps/SSE/bottom.predictions/climatology/{temperatures.bottom}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/bio.indicators/temperature/maps/SSE/bottom.predictions/climatology/{temperatures.bottom.sd}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/bio.indicators/substrate/R/{substrate.grainsize.edit}.png}  
   	\end{figure}
   	\end{column}
 
   	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\bd/bio.bathymetry/maps/SSE/depth.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.bathymetry/maps/SSE/slope.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.bathymetry/maps/SSE/curvature.png}  
+    \includegraphics[width=\textwidth]{\bd/ecmd/bathymetry/maps/SSE/depth.png}\\   
+    \includegraphics[width=\textwidth]{\bd/ecmd/bathymetry/maps/SSE/slope.png}\\   
+    \includegraphics[width=\textwidth]{\bd/ecmd/bathymetry/maps/SSE/curvature.png}  
   	\end{figure}
   	\end{column}
 
@@ -513,17 +513,17 @@ Environmental factors: Annual Estimates of Bottom Temperature
 
 	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\bd/bio.temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminusfive}.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminusthree}.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminusone}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/bio.indicators/temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminusfive}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/bio.indicators/temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminusthree}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/bio.indicators/temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminusone}.png}\\   
   	\end{figure}
   	\end{column}
 
   	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\bd/bio.temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminusfour}.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminustwo}.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yr}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/bio.indicators/temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminusfour}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/bio.indicators/temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yrminustwo}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/bio.indicators/temperature/maps/SSE/bottom.predictions/annual/{temperatures.bottom.\yr}.png}\\   
   	\end{figure}
   	\end{column}
 
@@ -554,17 +554,17 @@ Ecological factors: Species Composition, Species Diversity and Metabolic Rate
 
 	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\bd/bio.indicators/speciescomposition/maps/ca1/snowcrab/annual/{ca1.mean.\yr}.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.indicators/speciesarea/maps/Npred/snowcrab/annual/{Npred.mean.\yr}.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.indicators/metabolism/maps/mr/snowcrab/annual/{mr.mean.\yr}.png}  
+    \includegraphics[width=\textwidth]{\bd/ecmd/speciescomposition/maps/ca1/snowcrab/annual/{ca1.mean.\yr}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/ecmd/speciesarea/maps/Npred/snowcrab/annual/{Npred.mean.\yr}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/ecmd/metabolism/maps/mr/snowcrab/annual/{mr.mean.\yr}.png}  
   	\end{figure}
   	\end{column}
 
   	\begin{column}{0.25\textwidth}
  	\begin{figure}
-    \includegraphics[width=\textwidth]{\bd/bio.indicators/speciescomposition/maps/ca2/snowcrab/annual/{ca2.mean.\yr}.png}\\   
-    \includegraphics[width=\textwidth]{\bd/bio.indicators/speciesarea/maps/Z/snowcrab/annual/{Z.mean.\yr}.png}\\    
-    \includegraphics[width=\textwidth]{\bd/bio.indicators/metabolism/maps/smr/snowcrab/annual/{smr.mean.\yr}.png}  
+    \includegraphics[width=\textwidth]{\bd/ecmd/speciescomposition/maps/ca2/snowcrab/annual/{ca2.mean.\yr}.png}\\   
+    \includegraphics[width=\textwidth]{\bd/ecmd/speciesarea/maps/Z/snowcrab/annual/{Z.mean.\yr}.png}\\    
+    \includegraphics[width=\textwidth]{\bd/ecmd/metabolism/maps/smr/snowcrab/annual/{smr.mean.\yr}.png}  
   	\end{figure}
   	\end{column}
 
