--- a/inst/tex/ReportInterim4X.tex
+++ b/inst/tex/ReportInterim4X.tex
@@ -2,7 +2,7 @@
 \documentclass[paper=a4, fontsize=11pt]{article} 
 \usepackage[T1]{fontenc} 
 \usepackage[english]{babel} 
-\usepackage{amsmath,amsfonts,amecmei} 
+\usepackage{amsmath,amsfonts,amemei} 
 \usepackage{sectsty} 
 \usepackage{graphicx}
 \usepackage[hidelinks]{hyperref}
