--- a/inst/tex/RapFigures.tex
+++ b/inst/tex/RapFigures.tex
@@ -19,9 +19,9 @@
 \newcommand{\h}{\string~/}
 \newcommand{\e}{bio.data/}
 \newcommand{\es}{bio.data/bio.snowcrab/}
-\newcommand{\eb}{bio.data/ecmd/bathymetry/}
-\newcommand{\et}{bio.data/ecmd/temperature/}
-\newcommand{\ei}{bio.data/ecmd/}
+\newcommand{\eb}{bio.data/emgis/bathymetry/}
+\newcommand{\et}{bio.data/emgis/temperature/}
+\newcommand{\ei}{bio.data/emgis/}
 \newcommand{\Ay}{assessments/2016/}
 \newcommand{\A}{assessments/}
 \newcommand{\ebugs}{bio.data/bio.snowcrab/assessments/2016/figures/bugs/survey/}
