--- a/inst/tex/ReportInterim4X.tex
+++ b/inst/tex/ReportInterim4X.tex
@@ -2,7 +2,7 @@
 \documentclass[paper=a4, fontsize=11pt]{article} 
 \usepackage[T1]{fontenc} 
 \usepackage[english]{babel} 
-\usepackage{amsmath,amsfonts,amstm} 
+\usepackage{amsmath,amsfonts} 
 \usepackage{sectsty} 
 \usepackage{graphicx}
 \usepackage[hidelinks]{hyperref}
@@ -56,7 +56,7 @@ The 2015 snow crab trawl survey was conducted in 4X during 23-26 September 2015.
 
 \section{Results}
 \subsection{Trawl Survey}
-The snow crab trawl survey found commerical snow crab only in the eastern most stations (Figure 0.1). Even in years with extremely low trawl survey index for this crab fishing area (2012 and 2013), the commerical animals were found through out the surveyed area (Figure 0.1).  Note that in 2014, not all survey stations were completed and the spatial extent of the commerical snow crab was not estimated. The mean number of commercial snow crab per tow in 2015 was among the lowest since the survey reached its current spatial extent in CFA4X. The number of commercial animals per tow in 2014 was likely an overestimate as the full survey was not completed in CFA4X. 
+The snow crab trawl survey found commercial snow crab only in the eastern most stations (Figure 0.1). Even in years with extremely low trawl survey index for this crab fishing area (2012 and 2013), the commerical animals were found through out the surveyed area (Figure 0.1).  Note that in 2014, not all survey stations were completed and the spatial extent of the commerical snow crab was not estimated. The mean number of commercial snow crab per tow in 2015 was among the lowest since the survey reached its current spatial extent in CFA4X. The number of commercial animals per tow in 2014 was likely an overestimate as the full survey was not completed in CFA4X. 
 
 \subsection{Logbooks}
 The logbook data suggests that commercial catch rates for the first 12 days of the fishing season were the highest they have been since 2011, although they were below those of 2006, 2010 and 2011 (Figure 0.3). Four vessels were active during the month of Novemeber, one more than in 2014, however still below the high of 7 or 8 vessels in 2012 or 2011 resptively (Figure 0.4). The total landings for November 2015 reported in logbooks is less than that landed in 2009-2011, but higher than that landed in November for each of the past three fishing seasons (Figure 0.5). Smiilar to previous seasons the spatial extent of the fishing for 2015 has been limited to the eastern portion of CFA4X, around Sambro (Figure 0.6). In other years, fishing progressed further west throughout the season toward a secondary, area known as the Eastern Holes. It is unknown if the biomass of snow crab extends beyond this small pocket beyond Sambro (Figure 0.7).\\ 
