--- a/inst/tex/variablenames.tex
+++ b/inst/tex/variablenames.tex
@@ -33,8 +33,8 @@
 	\item[Z] species area calculations parameter Z the surface area parameter
 	\item[T] species area calculations parameter T the annual parameter
 	\item[Npred] Predicted number of species from the species area model
-	\item[ca1] correspondence analysis axis 1 from species composition analysis (speciescomposition.db.r)
-	\item[ca2] correspondence analysis axis 2 from species area (speciescomposition.db.r)
+	\item[ca1] correspondence analysis axis 1 from species composition analysis (speciescomposition_db.r)
+	\item[ca2] correspondence analysis axis 2 from species area (speciescomposition_db.r)
 	\item[nss.b1] normalized size spectrum parameter $lm(sizeclass~Number)$ b1 is slope
 	\item[nss.rsquared] normalized size spectrum model fit
 	\item[nss.shannon] normalized size spectrum shannon diversity
