--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -30,11 +30,10 @@ Now that data inputs are complete, we can continue on to model fitting and infer
 
 This requires [https://github.com/jae0/dynamical_model](https://github.com/jae0/dynamical_model). 
 
-Install it and then run:
+Install or download it and then run the following:
 
-[https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md](https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md)
+(Alternatively, you can run directly from [https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md](https://github.com/jae0/dynamical_model/blob/master/snowcrab/04.snowcrab_fishery_model.md), where more options are shown.)
 
-The following is an abbreviated version just for the default model.
 
 
 ```julia
@@ -113,6 +112,6 @@ savefig(pl, joinpath( model_outdir, string("plot_hcr_", aulab, ".pdf") )  )
 
 ```
 
-And that is it. Continue with report generation either through [Markdown](10.snowcrab_r_markdown_documents.R) or a word processor.
+And that is it. Continue with report generation either through [Markdown](./10.snowcrab_r_markdown_documents.md) or a word processor.
 
  
