--- a/inst/scripts/04.snowcrab_fishery_model_turing.md
+++ b/inst/scripts/04.snowcrab_fishery_model_turing.md
@@ -40,10 +40,12 @@ Install or download it and then run the following:
 # Julia-code follows:
 
 ## change these to the right year and location:
-year_assessment = <current year>  
+year_assessment = 2023 
 
 # location of dynamical_model
+
 project_directory = joinpath( homedir(), "bio", "dynamical_model", "snowcrab" ) 
+# project_directory = joinpath( homedir(), "projects", "dynamical_model", "snowcrab" ) 
 
 # location of data
 bio_data_directory = joinpath( homedir(), "bio.data" )  
